<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/welcomeText"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_to_rss_reader_app"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/loginText"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcomeText"
        android:layout_centerHorizontal="true"
        android:paddingTop="60dp"
        android:paddingBottom="60dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginText"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingTop="20dp" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputEmail"
        android:paddingTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:importantForAutofill="no"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputPassword"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="Login"
        android:textSize="20sp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/buttonGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonGoogle"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

    <TextView
        android:id="@+id/textRegister"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/don_t_have_account_yet" />

    <TextView
        android:id="@+id/textLinkRegister"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/purple_500"
        android:text="@string/register"
        android:foreground="?attr/selectableItemBackground"/>

    </LinearLayout>

</RelativeLayout>