<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    cardView:cardCornerRadius="8dp"
    cardView:cardElevation="8dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/recyclerViewImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                />

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/title"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textDate"
            android:textSize="12sp"
            android:textStyle="italic"
            android:layout_marginTop="5dp"
            android:text="@string/_2022_06_23_15_00_00"/>

        <TextView
            android:id="@+id/textContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/content"
            android:textSize="14sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonRemove"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/remove"
                android:textAlignment="center"
                android:textSize="11sp"
                android:layout_marginStart="10dp"/>

        </LinearLayout>



    </LinearLayout>

</androidx.cardview.widget.CardView>